--- a/dendron.yml
+++ b/dendron.yml
@@ -28,7 +28,7 @@ scratch:
     addBehavior: asOwnDomain
 site:
     assetsPrefix: notes
-    siteUrl: https://KavyaRPatel.gitub.io
+    siteUrl: https://kavyarpatel.github.io
     copyAssets: true
     siteHierarchies:
         - root
