--- a/dendron.2021.10.26.141038888.migrate-command-config.yml
+++ b/dendron.2021.10.26.141038888.migrate-command-config.yml
@@ -1,4 +1,4 @@
-maxPreviewsCached: 10
+version: 1
 vaults:
     -
         fsPath: vault
@@ -7,12 +7,15 @@ useNoteTitleForLink: true
 noAutoCreateOnDefinition: true
 noLegacyNoteRef: true
 noXVaultWikiLink: true
+lookupConfirmVaultOnCreate: false
 mermaid: true
 useKatex: true
 autoFoldFrontmatter: true
-usePrettyRefs: true
 dev:
     enablePreviewV2: true
+lookup:
+    note:
+        selectionType: selectionExtract
 journal:
     dailyDomain: daily
     name: journal
@@ -25,7 +28,7 @@ scratch:
     addBehavior: asOwnDomain
 site:
     assetsPrefix: notes
-    siteUrl: 'https://kavyarpatel.github.io'
+    siteUrl: https://kavyarpatel.github.io
     copyAssets: true
     siteHierarchies:
         - root
@@ -37,20 +40,4 @@ site:
         action: useVault
         payload:
             - vault
-version: 2
 initializeRemoteVaults: true
-commands:
-    lookup:
-        note:
-            selectionMode: extract
-            confirmVaultOnCreate: false
-            leaveTrace: false
-    randomNote: {}
-    insertNote:
-        initialValue: templates
-    insertNoteLink:
-        aliasMode: none
-        enableMultiSelect: false
-    insertNoteIndex:
-        enableMarker: false
-dendronVersion: 0.64.0
